--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,7 @@
+
+
+
+
 <html>
 	<head>
 		<style>
@@ -16,5 +20,10 @@
 	<p> 
 		Life is short -- order dessert! Choose from over 30 flavors, including Red Velvet, Raspberry Cheesecake, Pineapple Delight, Key Lime, Chocolate Peanut Butter Cup, Devil's Delight and Salty Caramel.  Special order our made from scratch cupcakes for your next birthday, wedding, holiday or any occasion! 
 	</p>
+
 	
 </html>
+
+<h1> <%= @customers.inspect %> </h1>
+
+
