--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,8 +1,9 @@
 <h1>Enter Your Customer Details Here </h1>
 <%= simple_form_for @customer do |f| %>
   <%= f.input :name %>
-  <%= f.input :order %>
+  <%= f.input :order %>s
   <%= f.input :phone %>
+  <br />
   <%= f.submit 'Create', :class => 'btn btn-danger' %>
 <% end %>
 
